--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 			<version>5.1.6.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 </project>
